make sure the high score textbox is on top of the explosion div

--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
 		#animationtest {
 			z-index: 1;
 		}
+		#namediv {
+			z-index: 2;
+		}
 	</style>
 </head>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.12.2/lottie.min.js" integrity="sha512-jEnuDt6jfecCjthQAJ+ed0MTVA++5ZKmlUcmDGBv2vUI/REn6FuIdixLNnQT+vKusE2hhTk2is3cFvv5wA+Sgg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
