--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		#gamearea {
 			z-index: 0;
 		}
-		#animationtest {
+		#animation {
 			z-index: 1;
 		}
 		#namediv {
@@ -57,7 +57,7 @@
 <body id="bodyid">
 	<div id="gamediv">
 		<canvas id="topbar" style='position:absolute; left:0px; top:0px; width: 100%; height: 10%'></canvas>
-		<div id="animationtest" style='position:absolute; left:0px; top:10%; width: 80%; height: 90%'></div>
+		<div id="animation" style='position:absolute; left:0px; top:10%; width: 80%; height: 90%'></div>
 		<canvas id="gamearea" style='position:absolute; left:0px; top:10%; width: 80%; height: 90%'></canvas>
 		<div id="leaderboard" style='position:absolute; left:80%; top:10%; width: 50%; height: 100%'></div>
 		</div>
@@ -408,14 +408,14 @@
 
 			// as t nears 0 the screen should get more red
 			function draw_fastly_treatment(t) {
-				let opacity = 0.6*t/3.0 + 0.4;
-				let gamearea = document.getElementById('bodyid');
-				gamearea.style.opacity = opacity;
-				gamearea.style.backgroundColor = "red";
+				// let opacity = 0.6*t + 0.4;
+				// let gamearea = document.getElementById('bodyid');
+				// gamearea.style.opacity = opacity;
+				// gamearea.style.backgroundColor = "red";
 
 				bodymovin.loadAnimation({
-					container: document.getElementById('animationtest'),
-					path: 'test.json',
+					container: document.getElementById('animation'),
+					path: 'data.json',
 					render: 'canvas',
 					loop: true,
 					autoplay: true,
