--- a/index.html
+++ b/index.html
@@ -79,6 +79,146 @@
 		let local_score = {};
 		let local_id = "";
 		let playername = "";
+		const gamepadsByIndex = {};
+		const controllerTemplate = `
+<div>
+  <div class="head"><div class="index"></div><div class="id"></div></div>
+  <div class="info"><div class="label">connected:</div><span class="connected"></span></div>
+  <div class="info"><div class="label">mapping:</div><span class="mapping"></span></div>
+  <div class="inputs">
+    <div class="axes"></div>
+    <div class="buttons"></div>
+  </div>
+</div>
+`;
+const axisTemplate = `
+<svg viewBox="-2.2 -2.2 4.4 4.4" width="128" height="128">
+    <circle cx="0" cy="0" r="2" fill="none" stroke="#888" stroke-width="0.04" />
+    <path d="M0,-2L0,2M-2,0L2,0" stroke="#888" stroke-width="0.04" />
+    <circle cx="0" cy="0" r="0.22" fill="red" class="axis" />
+    <text text-anchor="middle" fill="#CCC" x="0" y="2">0</text>
+</svg>
+`
+
+const buttonTemplate = `
+<svg viewBox="-2.2 -2.2 4.4 4.4" width="64" height="64">
+  <circle cx="0" cy="0" r="2" fill="none" stroke="#888" stroke-width="0.1" />
+  <circle cx="0" cy="0" r="0" fill="none" fill="red" class="button" />
+  <text class="value" dominant-baseline="middle" text-anchor="middle" fill="#CCC" x="0" y="0">0.00</text>
+  <text class="index" alignment-baseline="hanging" dominant-baseline="hanging" text-anchor="start" fill="#CCC" x="-2" y="-2">0</text>
+</svg>
+`;
+
+	const buttonids = {
+		FACE_1: 0, // Face (main) buttons
+		FACE_2: 1,
+		FACE_3: 2,
+		FACE_4: 3,
+		LEFT_SHOULDER: 4, // Top shoulder buttons
+		RIGHT_SHOULDER: 5,
+		LEFT_SHOULDER_BOTTOM: 6, // Bottom shoulder buttons
+		RIGHT_SHOULDER_BOTTOM: 7,
+		SELECT: 8,
+		START: 9,
+		LEFT_ANALOGUE_STICK: 10, // Analogue sticks (if depressible)
+		RIGHT_ANALOGUE_STICK: 11,
+		PAD_TOP: 12, // Directional (discrete) pad
+		PAD_BOTTOM: 13,
+		PAD_LEFT: 14,
+		PAD_RIGHT: 15
+	};
+
+		function applyDeadZone(number, threshold){
+		percentage = (Math.abs(number) - threshold) / (1 - threshold);
+
+		if(percentage < 0)
+			percentage = 0;
+
+		return percentage * (number > 0 ? 1 : -1);
+		}
+		function addGamepad(gamepad) {
+			console.log('add:', gamepad.index);
+			const elem = document.createElement('div');
+			elem.innerHTML = controllerTemplate;
+
+			const axesElem = elem.querySelector('.axes');
+			const buttonsElem = elem.querySelector('.buttons');
+			
+			const axes = [];
+			for (let ndx = 0; ndx < gamepad.axes.length; ndx += 2) {
+				const div = document.createElement('div');
+				div.innerHTML = axisTemplate;
+				axesElem.appendChild(div);
+				axes.push({
+				axis: div.querySelector('.axis'),
+				value: div.querySelector('text'),
+				});
+			}
+
+			const buttons = [];
+			for (let ndx = 0; ndx < gamepad.buttons.length; ++ndx) {
+				const div = document.createElement('div');
+				div.innerHTML = buttonTemplate;
+				buttonsElem.appendChild(div);
+				div.querySelector('.index').textContent = ndx;
+				buttons.push({
+				circle: div.querySelector('.button'),
+				value: div.querySelector('.value'),
+				});
+			}
+
+			gamepadsByIndex[gamepad.index] = {
+				gamepad,
+				elem,
+				axes,
+				buttons,
+				index: elem.querySelector('.index'),
+				id: elem.querySelector('.id'),
+				mapping: elem.querySelector('.mapping'),
+				connected: elem.querySelector('.connected'),
+			};
+			}
+
+			function removeGamepad(gamepad) {
+			const info = gamepadsByIndex[gamepad.index];
+			if (info) {
+				delete gamepadsByIndex[gamepad.index];
+				info.elem.parentElement.removeChild(info.elem);
+			}
+			}
+
+			function addGamepadIfNew(gamepad) {
+			const info = gamepadsByIndex[gamepad.index];
+			if (!info) {
+				addGamepad(gamepad);
+			} else {
+				// This broke sometime in the past. It used to be
+				// the same gamepad object was returned forever.
+				// Then Chrome only changed to a new gamepad object
+				// is returned every frame.
+				info.gamepad = gamepad;
+			}
+		}
+
+		function addNewPads() {
+			const gamepads = navigator.getGamepads();
+			for (let i = 0; i < gamepads.length; i++) {
+				const gamepad = gamepads[i]
+				if (gamepad) {
+				addGamepadIfNew(gamepad);
+				}
+			}
+		}
+
+		function handleConnect(e) {
+			console.log('connect');
+			addGamepadIfNew(e.gamepad);
+		}
+
+		function handleDisconnect(e) {
+			console.log('disconnect');
+			removeGamepad(e.gamepad);
+		}
 
 		function get_value_from_cookie(key) {
 			var value;
@@ -568,6 +708,62 @@
 			// TODO set timer for get_leaderboard_entries
 
 			// Input processing
+			const keys = ['index', 'id', 'connected', 'mapping', /*'timestamp'*/];
+			function processController(info) {
+				const {elem, gamepad, axes, buttons} = info;
+				const lines = [`gamepad  : ${gamepad.index}`];
+				for (const key of keys) {
+					info[key].textContent = gamepad[key];
+				}
+
+				let v = applyDeadZone(gamepad.axes[0], 0.1);
+				let direction = false;
+				if (v < 0.0) {
+					module.toggle_left(true);
+					module.toggle_right(false);
+					direction = true;
+				} else if (v > 0.0) {
+					module.toggle_left(false);
+					module.toggle_right(true);
+					direction = true;
+				}
+				let all_released = true;
+				buttons.forEach(({circle, value}, ndx) => {
+					const button = gamepad.buttons[ndx];
+
+					if (ndx == buttonids.PAD_LEFT) {
+						if (button.pressed) {
+							module.toggle_left(true);
+							module.toggle_right(false);
+							direction = true;
+						}
+					} else if (ndx == buttonids.PAD_RIGHT) {
+						if (button.pressed) {
+							module.toggle_left(false);
+							module.toggle_right(true);
+							direction = true;
+						}
+					} else if (ndx != buttonids.PAD_TOP && ndx != buttonids.PAD_BOTTOM ) {
+						if (button.pressed) {
+							module.key_pressed(" ", true);
+							module.toggle_fire(true);
+							all_released = false;
+						}
+					}
+					circle.setAttributeNS(null, 'r', button.value * 2);
+					circle.setAttributeNS(null, 'fill', button.pressed ? 'red' : 'gray');
+					value.textContent = `${button.value.toFixed(2)}`;
+				});
+				if (all_released) {
+					module.toggle_fire(false);
+					module.key_pressed(" ", false);
+				}
+				if (!direction) {
+					module.toggle_left(false);
+					module.toggle_right(false);
+				}
+			}
+
 			function processKey(key, b) {
 				// while in game over, don't do this
 				if (checking_for_high_score) {
@@ -591,6 +787,8 @@
 			}
 			document.addEventListener('keydown', e => processKey(e.key, true));
 			document.addEventListener('keyup', e => processKey(e.key, false));
+			window.addEventListener('gamepadconnected', e => handleConnect(e));
+			window.addEventListener('gamepaddisconnected', e => handleDisconnect);
 
 			/*
 			Sprites are 12x12, and the enemy game radius is 24
@@ -776,6 +974,8 @@
 
 				// Update and draw
 				let progress = (timestamp - prevTimestamp) / 1000;
+				addNewPads();
+				Object.values(gamepadsByIndex).forEach(processController);
 				module.update(progress);
 				module.draw(progress);
 
