--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <body id="bodyid">
 	<div id="gamediv">
 		<canvas id="topbar" style='position:absolute; left:0px; top:0px; width: 100%; height: 10%'></canvas>
-		<div id="animation" style='position:absolute; left:0px; top:5%; width: 80%; height: 90%'></div>
+		<div id="animation" style='position:absolute; left:0px; top:5%; width: 80%; height: 100%'></div>
 		<canvas id="gamearea" style='position:absolute; left:0px; top:10%; width: 80%; height: 90%'></canvas>
 		<div id="leaderboard" style='position:absolute; left:80%; top:10%; width: 50%; height: 100%'></div>
 		</div>
@@ -637,6 +637,9 @@ const buttonTemplate = `
 					autoplay: true,
 					name: 'explosion'
 				});
+				setTimeout(() => {
+					anim.stop();
+				}, 500);
 				anim.addEventListener('complete', e => {
 					document.getElementById('animation').style.display = 'none'
 				});
